css/css.css
body {

	padding-top: 0px;
	font-family: 'Open Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
}

h3{
	font-weight: bolder;
	color: black;
}


h2{
	color: red;
	font-family: 'Amatic SC', bold;
	font-size: 40px;
	font-weight: bold;
}


h1 {
	font-family: 'Dancing Script';
	font-size: 70px;
	color: #ffd633;
	font-weight: bold;
}

.news-field{
	background-color:  #ffe066;
	border-radius: 2px;
	padding: 15px;

}

.date-and-time li{
	display: inline;
	list-style: none;
}

.main-copy {
	background-color:white;
	padding: 50px;
	margin-top: -20px;
}

.main-copy h2 {
	color: #F01616;
}


.grey {
	color: #C9C9BB;
}


.container-main {
	background-color:white ;
	padding-top:0px;
	margin-top: 0px;
	width: auto;
	margin: 20px;
}

.centre {
	text-align: center;
}


.yellow {
	background-color: #ffd633;
}


.green {
	color: #10632F;
}

.red {
	background-color: #F70A0A;
}

ul, {
	margin: -10px !important;
}

.navbar-toggle {
	background-color: #ffd633;
	border-color: #10632F;
	margin-right: 0;
}

.navbar-nav{
	margin-top: 0;
}

.collapse{
	margin-top: -10px;
	padding-top: -10px;
}

button span {
	background-color: #10632F ;
}

.help_buttons {
text-align: center;
border: 2px solid black;
padding:18px;
color: black;

}


.nav, .nav  {
	background-color: #10632F;
}

.nav ul li a{
	border: none;
	color: white;
	margin-left: 10px;
	margin-right: 10px;
	font-size: 13px;
}

.nav ul li a:last-child{
	margin-right: 0;
}

.nav ul li a:hover, .nav ul li a:focus, .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
	color: #ffd633;
	background-color: transparent;
	border: 0;
}


.navbar-nav>li>.dropdown-menu{
	background-color: #10632F;
	margin-top: -1px;
}

.navbar-brand {
	color:#ffd633;
	font-family: 'Dancing Script', cursive;
	font-size:26px;
	font-weight: bold;
	padding: 15px 0;
}

.navbar-brand:hover {
	color:black;
}

.navbar-header{
	margin: 0!important;
}

footer {
	background-color: #10632F;
	padding-top:20px;

}


.social {
	padding: 10px;
	border: 0;
	z-index: 1;
}

.social-header{
	display:none;
	position:absolute;
	right: 0;
}

.social-intro{
	display: block;
	text-align: center;
}

.btn-social {
	margin-left: 10px;
	border-radius: 10px;
	border: 0;
	height: 40px;
	width: 87px;
	font-weight: bold;

}


.facebook{
	background-color: #3b5998;
	color: white;
}

.twitter {
		background-color: #55acee;
	color: white;
}



.carousel-caption {
	display: none;
}

.mobile-only {
	display: inline;
}

.escape {
	display: none;
	position: fixed;
	right: 0;
	bottom: 50px;
	height:100px;
	width: 100px;
	margin:10px;
	border-radius: 50px;
	background-color: #333;
	border: 0;
	color: white;
	font-weight: bold;
	z-index: 1;
	}


.valerie, .news-pic{
	border-radius: 1px;
	border: 1px solid grey;
}

.news-pic{
	vertical-align:middle;
	margin-top: 20px;
}

.valerie {
	margin-top: 50px
}

.logo {
	margin-top: 50px;
	width: 100%;
	height: auto;
}


.inner-column {
    padding:30px;
	}

.inner-padding {
	padding-top:15px;
	}


.jumbotron h2{
    color: #00802b;
	}


.jumbotron h4{
     color:  #3d3d5c
;
	 }

.emphasise {
	font-style: italic;
}

.jumbotron  {
	background-color: white;
	padding-bottom: 0px;

}

.jumbotron .text-area {
	background-color: #ffd633;
	opacity: 0.8

}

.text-area{
	padding-right:100px;
	padding-left: 100px;
}

.text-area .h1{
	font-family: 'Open Sans', sans-serif;
}

.card-container{
	margin: 0 20px;
}

.card{
	width: 100%;
	max-width: 400px;
	margin: 0px auto 20px;
	border: dotted black 2px;
	padding: 15px;
}

.card-front, .card-back {
	color:white;
	text-align: center;
}

.card-front{
	margin-bottom: 10px;
}

.card-text{
	font-size: 16px;
}

.card-link{
	color: white;
}

.card-yellow{
	background-color: #ffbb33;
}

.card-red{
	background-color:  #c32602;
}

.card-green {
	background-color: #00cc00;
}

.card-title {
	font-weight: bold;
	font-size:40px;
	color:white;
	margin: 0;
	line-height: 1em;
}


.link{
	color: #3333ff;
}

.portrait {
	display: block;
	padding-top: 40px;
	margin: auto;
}


.ebay-logo{
	width: 130px;
}

.container {
	width: auto;
}

.shop-desktop{
	display:none;
}
.shop-mobile{
	display: block;
}


@media (min-width: 767px){
	.nav .container {
	    width: 100%;
	}

	.container-main {
		margin: 0 100px;
	}
	.footer .container{
		margin-right:100px;
	}

	.mobile-only {
		display:none;
	}
	.social-header {
		display: block;
	}
	.social-intro{
		display: none;
	}
	#escape {
		display: block;
	}
	.shop-desktop{
		display:block;
	}
	.shop-mobile{
		display: none;
	}
}

@media (max-width: 766px){
	.nav {
		padding: 0 15px;
	}
	.carousel-inner{
		margin-top: 18px;
	}
	.navbar-collapse{
		clear: left;
	}
	.valerie{
		max-width: 300px;
		margin: auto;
	}
}


@media (min-width: 765px) and (max-width: 785px){
	.nav ul li a{
		margin-right: 7px;
		margin-left: 7px;
	}
}

@media (min-width: 960px){
	.our-team-container{
		padding-right: 250px;
	}

 .card-container{
	 display: flex;
	 align-items: stretch;
	 justify-content: space-between;
	 margin: 0 100px;
 }

	/* entire container, keeps perspective */
 .card {
		perspective: 1000px;
		width: 30%;
		height: 144px;
		border: 0;
		padding: 0;
		background-color: transparent;
	}


		/* flip the pane when hovered */
		.card:hover .card-content, .card.hover .card-content {
			transform: rotateX(180deg);
		}

	.card-front, .card-back {
		width: 100%;
		height: 144px;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		border: dotted black 2px;
		padding: 15px;
	}

	.card-yellow .card-front, .card-yellow .card-back{
		background-color: #ffbb33;
	}

	.card-red .card-front, .card-red .card-back{
		background-color:  #c32602;
	}

	.card-green .card-front, .card-green .card-back{
		background-color: #00cc00;
	}


	.card .card-content {
			transform-origin: 100% 72px; /* half of height */
		}

	/* flip speed goes here */
	.card-content {
		transition: 0.6s;
		transform-style: preserve-3d;

		position: relative;
	}

	/* hide back of pane during swap */
	.card-front, .card-back {
		backface-visibility: hidden;

		position: absolute;
		top: 0;
		left: 0;
	}

	/* front pane, placed above back */
	.card-front {
		z-index: 2;
		/* for firefox 31 */
		transform: rotateX(0deg);
		margin-bottom: 0;
	}

	/* back, initially hidden pane */
	.card-back {
		transform: rotateX(180deg);
	}
}

@media(max-width: 991px){

	.logo{
		max-width: 220px;
		margin: 20px auto -30px;
		}
	.news-pic{
		max-width: 350px;
		margin: auto;
	}
}

